--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "next": "^15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-responsive-carousel": "^3.2.23"
+    "react-icons": "^5.5.0",
+    "react-responsive-carousel": "^3.2.23",
+    "tailwindcss-textshadow": "^2.1.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
