--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-responsive-carousel": "^3.2.23",
+    "swiper": "^12.0.2",
     "tailwindcss-textshadow": "^2.1.3"
   },
   "devDependencies": {
