--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
+    "@mui/material": "^7.3.2",
     "cargomty-redesign": "file:",
     "framer-motion": "^12.23.14",
     "lucide-react": "^0.525.0",
