--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
+    "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "cargomty-redesign": "file:",
     "framer-motion": "^12.23.14",
