--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-responsive-carousel": "^3.2.23",
+    "resend": "^6.1.2",
     "swiper": "^12.0.2",
     "tailwindcss-textshadow": "^2.1.3"
   },
@@ -52,5 +53,4 @@
     "url": "https://github.com/ProjectMty/cargo-redise-/issues"
   },
   "homepage": "https://github.com/ProjectMty/cargo-redise-#readme"
-  
 }
