--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "@react-pdf/renderer": "^4.3.1",
     "cargomty-redesign": "file:",
     "framer-motion": "^12.23.14",
     "lucide-react": "^0.525.0",
