--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@react-pdf/renderer": "^4.3.1",
+    "animejs": "^4.2.2",
     "cargomty-redesign": "file:",
     "framer-motion": "^12.23.14",
     "lucide-react": "^0.525.0",
