--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "@react-email/components": "^0.5.6",
     "@react-pdf/renderer": "^4.3.1",
     "animejs": "^4.2.2",
+    "axios": "^1.12.2",
     "cargomty-redesign": "file:",
+    "express": "^5.1.0",
     "framer-motion": "^12.23.14",
     "lucide-react": "^0.525.0",
     "next": "^15.3.5",
@@ -33,6 +36,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/express": "^5.0.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
