--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^5.5.0",
     "react-responsive-carousel": "^3.2.23",
     "resend": "^6.1.2",
+    "sweetalert2": "^11.26.2",
     "swiper": "^12.0.2",
     "tailwindcss-textshadow": "^2.1.3"
   },
