--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-pdf/renderer": "^4.3.1",
     "animejs": "^4.2.2",
     "axios": "^1.12.2",
+    "better-sqlite3": "^12.4.1",
     "cargomty-redesign": "file:",
     "express": "^5.1.0",
     "framer-motion": "^12.23.14",
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/express": "^5.0.3",
     "@types/node": "^20",
     "@types/react": "^19",
